GPC/tests/examples/fail/multipleObjectDecls.gpc

GPRM::Kernel::Test a;
GPRM::Kernel::Test2 a;

int GPRM::Test::multipleObjectDecls() {
    return 0;
}
